# project-1

./: .gitignore  README.md
airflow/: Dockerfile
airflow/dags/: spark-business-pi.yaml  spark-delivery-pi.yaml  spark-sales-pi.yaml  spark_business_job_dag.py  spark_delivery_job_dag.py  spark_sales_job_dag.py
airflow/dags/utils/: planner.py
data-analyst-agent/: .dockerignore  Dockerfile  chat_deployed.py  chat_local.py  deploy-agent.yaml  pyproject.toml
data-analyst-agent/scout/: env.py  graph.py  tools.py
data-analyst-agent/scout/prompts/: scout.md
observability-agent/agent/: Dockerfile  langgraph.json  pyproject.toml
observability-agent/agent/observer/: graph.py  tools.py
observability-agent/agent/observer/prompts/: observer.md  prompts.py
spark/: .gitignore  Dockerfile  JenkinsFile  business_job.py  delivery_job.py  sales_job.py  service-monitor.yaml  test_business_job.py  test_delivery_job.py  test_sales_job.py
